fixed z-index

--- a/assets/styl/main.styl
+++ b/assets/styl/main.styl
@@ -471,7 +471,7 @@ section
 		position: relative
 		padding: 20px
 		color: white
-		z-index: 8888
+		z-index: 900
 		margin-bottom: 20px
 		p 
 			margin: 5px 0 10px 0
